Change BukkitRegistry logic